Fill in initial content

--- a/index.html
+++ b/index.html
@@ -9,9 +9,65 @@
     </head>
 
     <body>
+        <div class="header">
+            Header Logo
+            <div class="links">
+                <ul>
+                    <li><a href="page">header link one</a></li>
+                    <li><a href="page">header link two</a></li>
+                    <li><a href="page">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="body">
+            <div class="intro">
+                <h1>This website's intro</h1>
+                <p>This website's subtext</p>
+                <button>Sign up</button>
+
+                <img src=".jpg" alt="filler image">
+            </div>
+
+            <div class="middle">
+
+                <h1>Some information</h1>
+                <div class="images">
+                    <img src=".jpg" alt="img 1">
+                    <img src=".jpg" alt="img 2">
+                    <img src=".jpg" alt="img 3">
+                    <img src=".jpg" alt="img 4">
+                </div>
+
+                <div class="img text">
+                    <div>some text</div>
+                    <div>some text</div>
+                    <div>some text</div>
+                    <div>some text</div>
+                </div>
+            </div>
+
+            <div class="quote">
+                <div>
+                    This is the quote!
+                </div>
+                <div>
+                    -Signature
+                </div>
+            </div>
+
+            <div class="signup">
+                Sign up for this by clicking on that button right there!
+            </div>
+            <button>Sign up</button>
+
+            <div class="footer">
+                Copyright The Odin Project 2021
+            </div>
+
+        </div>
 
 
-        
     </body>
 
 </html>
