Add img and replace filler text

--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
             Header Logo
             <div class="links">
                 <ul>
-                    <li><a href="page">header link one</a></li>
-                    <li><a href="page">header link two</a></li>
-                    <li><a href="page">header link three</a></li>
+                    <li><a href="page">Popular</a></li>
+                    <li><a href="page">Profile</a></li>
+                    <li><a href="page">Cart</a></li>
                 </ul>
             </div>
         </div>
 
-        <div class="body">
+        <div class="content">
             <div class="intro">
-                <h1>This website's intro</h1>
-                <p>This website's subtext</p>
-                <button>Sign up</button>
+                <div class="intro-text">
+                    <h1>This website's intro</h1>
+                    <p>This website's subtext going under the main title. It has smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
 
-                <img src=".jpg" alt="filler image">
+                <img src="img/keychron-keyboard.jpg" alt="filler image">
             </div>
 
             <div class="middle">
