Change intro font info and grouping

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="header">
-            Header Logo
+            Keychron
             <div class="links">
                 <ul>
                     <li><a href="page">Popular</a></li>
