Add new images to center

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
                 <h1>Some information</h1>
                 <div class="images">
-                    <img src=".jpg" alt="img 1">
-                    <img src=".jpg" alt="img 2">
-                    <img src=".jpg" alt="img 3">
-                    <img src=".jpg" alt="img 4">
+                    <img src="img/mkbhd.jpg" alt="img 1">
+                    <img src="img/ltt.jpg" alt="img 2">
+                    <img src="img/verge.jpg" alt="img 3">
+                    <img src="img/engadget.jpg" alt="img 4">
                 </div>
 
                 <div class="img text">
