Center middle text and spaced imgs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="middle">
 
-                <h1>Some information</h1>
+                <div class="middle-title">Some information</div>
                 <div class="images">
                     <img src="img/mkbhd.jpg" alt="img 1">
                     <img src="img/ltt.jpg" alt="img 2">
@@ -41,7 +41,7 @@
                     <img src="img/engadget.jpg" alt="img 4">
                 </div>
 
-                <div class="img text">
+                <div class="img-text">
                     <div>some text</div>
                     <div>some text</div>
                     <div>some text</div>
