Redo cards to center and read easier

--- a/index.html
+++ b/index.html
@@ -34,19 +34,26 @@
             <div class="middle">
 
                 <div class="middle-title">Some information</div>
-                <div class="images">
-                    <img src="img/mkbhd.jpg" alt="img 1">
-                    <img src="img/ltt.jpg" alt="img 2">
-                    <img src="img/verge.jpg" alt="img 3">
-                    <img src="img/engadget.jpg" alt="img 4">
+                
+                <div class="cards">
+                    <div class="info">
+                        <img src="img/mkbhd.jpg" alt="img 1">
+                        <div class="text">mkbhd</div>
+                    </div>
+                    <div class="info">
+                        <img src="img/ltt.jpg" alt="img 2">
+                        <div class="text">linus tech tips</div>
+                    </div>
+                    <div class="info">
+                        <img src="img/verge.jpg" alt="img 3">
+                        <div class="text">verge</div>
+                    </div>
+                    <div class="info">
+                        <img src="img/engadget.jpg" alt="img 4">
+                        <div class="text">engadget</div>
+                    </div>
                 </div>
 
-                <div class="img-text">
-                    <div>some text</div>
-                    <div>some text</div>
-                    <div>some text</div>
-                    <div>some text</div>
-                </div>
             </div>
 
             <div class="quote">
