Stop intro-img shrinking and remove intro margins

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <div class="content">
             <div class="intro">
                 <div class="intro-text">
-                    <h1>This website's intro</h1>
+                    <h1>This website has keyboards!!</h1>
                     <p>This website's subtext going under the main title. It has smaller font and the color is lower contrast.</p>
                     <button>Sign up</button>
                 </div>
-
-                <img src="img/keychron-keyboard.jpg" alt="filler image">
+                
+                <div class="intro-img">
+                    <img src="img/keychron-keyboard.jpg" alt="filler image">
+                </div>
             </div>
 
             <div class="middle">
