--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
             <div class="quote">
                 <div>
-                    This is the quote!
+                    This is a quote about someone who likes keyboards! Wow. This keyboard is great. It sounds amazing and clicks well!
                 </div>
                 <div>
-                    -Signature
+                    -Keyboard Enthusiast
                 </div>
             </div>
 
