Add details for signature

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div>
                     This is a quote about someone who likes keyboards! Wow. This keyboard is great. It sounds amazing and clicks well!
                 </div>
-                <div>
+                <div class="signature">
                     -Keyboard Enthusiast
                 </div>
             </div>
