Seperate quote text into seperate class

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="quote">
-                <div>
+                <div class="quote-text">
                     This is a quote about someone who likes keyboards! Wow. This keyboard is great. It sounds amazing and clicks well!
                 </div>
                 <div class="signature">
