Seperate signup into seperate blocks

--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
                 </div>
             </div>
 
-            <div class="signup">
-                Sign up for this by clicking on that button right there!
+            <div class="signup-block">
+                <div class="signup-card">
+                    Sign up for this by clicking on that button right there!
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
+            
 
         </div>
 
