--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
                 </div>
             </div>
             
-
         </div>
 
         <div class="footer">
-            Copyright The Odin Project 2021
+            Copyright © The Odin Project 2021
         </div>    
 
     </body>
