Add reviews to imgs and center them

--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
 
             <div class="middle">
 
-                <div class="middle-title">Some information</div>
+                <div class="middle-title">Keyboard reviewers</div>
                 
                 <div class="cards">
                     <div class="info">
                         <img src="img/mkbhd.jpg" alt="img 1">
-                        <div class="text">mkbhd</div>
+                        <div class="text">With its sleek design and tactile keys, this keyboard is a joy to use and a sight to behold</div>
                     </div>
                     <div class="info">
                         <img src="img/ltt.jpg" alt="img 2">
-                        <div class="text">linus tech tips</div>
+                        <div class="text">This keyboard is an absolute game-changer</div>
                     </div>
                     <div class="info">
                         <img src="img/verge.jpg" alt="img 3">
-                        <div class="text">verge</div>
+                        <div class="text">Ergonomically designed keys offer a satisfying tactile experience</div>
                     </div>
                     <div class="info">
                         <img src="img/engadget.jpg" alt="img 4">
-                        <div class="text">engadget</div>
+                        <div class="text">Impeccable blend of wireless convenience and tactile mechanical switches</div>
                     </div>
                 </div>
 
